[package]
name = "NightsWatch"
version = "0.1.0"
authors = ["devfans <stefanliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nw-castle-black"
path = "src/castle-black.rs"

[[bin]]
name = "nw-ranger"
path = "src/agent.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "*"
env_logger = "*"
tokio = "=0.2.0-alpha.4"
tokio-timer = "=0.3.0-alpha.4"
tokio-net = { version = "=0.2.0-alpha.4", features = ["process"] }
bytes = "0.4"
futures-preview = "=0.3.0-alpha.18"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["sink"] }
rhai = { git = "https://github.com/devfans/rhai.git", branch = "nightswatch" }
simple_redis = "0.3.44"
