[package]
name = "NightsWatch"
version = "0.1.0"
authors = ["devfans <stefanliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nw-castle-black"
path = "src/castle-black.rs"

[[bin]]
name = "nw-ranger"
path = "src/agent.rs"

[[bin]]
name = "nw-test-maester"
path = "src/maester-client.rs"

[dependencies]
chrono = "*"
ws = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "*"
env_logger = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3.1"
bytes = "0.5"
rhai = { git = "https://github.com/devfans/rhai.git", branch = "nightswatch" }
simple_redis = "0.3.44"

